# znaf

CORE/: startup_stm32f40_41xxx.s
FREERTOS/include/: FreeRTOSConfig.h
HARDWARE/BEEP/: beep.c  beep.h
HARDWARE/DCMI/: dcmi.c  dcmi.h
HARDWARE/ESP8266/: esp8266.c  esp8266.h  esp8266_mqtt.c  esp8266_mqtt.h
HARDWARE/FIRE/: fire.c  fire.h
HARDWARE/KEY/: key.c  key.h
HARDWARE/LCD/: bmp.h  lcd_font.h  tft.c  tft.h
HARDWARE/LED/: led.c  led.h
HARDWARE/MQ2/: mq2.c  mq2.h
HARDWARE/OV2640/: ov2640.c  ov2640.h  ov2640cfg.h  sccb.c  sccb.h
HARDWARE/RTC/: rtc.c  rtc.h
HARDWARE/SR04/: sr04.c  sr04.h
LVGL/: lv_conf.h  lv_conf.h~RF22174b.TMP  lv_conf.h~RF2d63378.TMP  lv_conf.h~RF44df2c1.TMP  lv_conf.h~RF7fa166.TMP  lvgl.h
LVGL/porting/: lv_port_disp.c  lv_port_indev.c
LVGL/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
LVGL/ui/images/: ui_img_fail_png.c  ui_img_fire_png.c  ui_img_humidity_png.c  ui_img_light_png.c  ui_img_lock_png.c  ui_img_mq2_png.c  ui_img_protect111_png.c  ui_img_search_house_png.c  ui_img_success_png.c  ui_img_temperature_png.c  ui_img_time_png.c
LVGL/ui/screens/: ui_ScreenEnroll.c  ui_ScreenLightCtrl.c  ui_ScreenLogin.c  ui_ScreenMenu.c  ui_ScreenMonitor.c  ui_ScreenSetTime.c  ui_ScreenStart.c  ui_ScreenSureSetTime.c
PROJECT/: JLinkLog.txt  demo.uvguix.26653  demo.uvguix.Administrator  demo.uvoptx  demo.uvprojx
SYSTEM/delay/: delay.h
SYSTEM/usart/: usart.c  usart.h
USER/: includes.h  main.c  stm32f4xx_it.c
